# call-intelligence-agent

./: .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile.receiver  Dockerfile.worker  PLAN.md  cloudbuild.worker.yaml  cloudbuild.yaml  conftest.py  pyproject.toml
app/: __init__.py  config.py  main.py
app/adapters/crm/: __init__.py  base.py  factory.py  grs.py  intake.py  medhub.py
app/adapters/stt/: base.py  deepgram.py  google_stt.py  passthrough.py
app/adapters/telephony/: __init__.py  base.py  phoneburner.py  ringcentral.py
app/api/: __init__.py  health.py
app/api/webhooks/: __init__.py  phoneburner.py  ringcentral.py
app/extraction/: __init__.py  agent.py
app/extraction/prompts/: __init__.py  grs.py  intake.py  medhub.py
app/extraction/schemas/: __init__.py  grs.py  intake.py  medhub.py
app/matching/: __init__.py  matcher.py  review_queue.py
app/models/: __init__.py  call_event.py  match_result.py  note.py
app/storage/: __init__.py  audit.py  gcs.py
app/worker/: main.py  pipeline.py
app/worker/steps/: s1_ingest.py  s2_fetch.py  s3_transcribe.py  s4_extract.py  s5_match.py  s6_route.py  (+2 more)
docs/: frontend-call-fields.md
migrations/: 001_call_audit_log.sql  002_add_matched_on_phone.sql
tests/integration/: test_crm_write.py  test_phoneburner_webhook.py  test_ringcentral_webhook.py
tests/unit/: test_audit.py  test_crm_base.py  test_crm_intake_updates.py  test_crm_medhub.py  test_deepgram.py  test_extraction.py  test_matching.py  test_pipeline.py  test_s1_ringcentral.py  test_s2_fetch.py  test_schemas.py  test_worker_main.py
