[project]
name = "call-intelligence-agent"
version = "0.1.0"
description = "Agent 5 - Call Intelligence and CRM Sync service skeleton."
readme = "PLAN.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "google-cloud-pubsub",
    "google-cloud-storage",
    "google-cloud-secret-manager",
    "deepgram-sdk",
    "anthropic",
    "pydantic",
    "pydantic-settings",
    "asyncpg",
    "sqlalchemy[asyncio]",
    "httpx",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
